@@ -44,93 +44,93 @@ image *titlebackgr, *periscope, *threesubsimg, *damage_screen_background, *sub_d
 
 void init_global_data(void)
 {
-	skyhemisphere = new model(get_data_dir() + MODEL_DIR + "skyhemisphere.3ds");
-	water = new texture(get_data_dir() + TEXTURE_DIR + "water.png", GL_LINEAR);
-	the_moon = new texture(get_data_dir() + TEXTURE_DIR + "themoon.png", GL_LINEAR);
-	the_sun = new texture(get_data_dir() + TEXTURE_DIR + "thesun.png", GL_LINEAR);
-	background = new texture(get_data_dir() + TEXTURE_DIR + "background.png", GL_LINEAR);
-	merchant_large = new model(get_data_dir() + MODEL_DIR + "large_merchant.3ds");
-	merchant_medium = new model(get_data_dir() + MODEL_DIR + "medium_merchant.3ds");
-	merchant_small = new model(get_data_dir() + MODEL_DIR + "small_merchant.3ds");
-	troopship_medium = new model(get_data_dir() + MODEL_DIR + "medium_troopship.3ds");
-	battleship_malaya = new model(get_data_dir() + MODEL_DIR + "battleship_malaya.3ds");
-	carrier_bogue = new model(get_data_dir() + MODEL_DIR + "carrier_bogue.3ds");
-	subVII = new model(get_data_dir() + MODEL_DIR + "submarine_VIIc.3ds");
-	subIXc40 = new model(get_data_dir() + MODEL_DIR + "submarine_IXc40.3ds");
-	subXXI = new model(get_data_dir() + MODEL_DIR + "submarine_XXI.3ds");
-	destroyer_tribal = new model(get_data_dir() + MODEL_DIR + "destroyer_tribal.3ds");
-	corvette_mdl = new model(get_data_dir() + MODEL_DIR + "corvette.3ds");
-	freighter_large = new model(get_data_dir() + MODEL_DIR + "large_freighter.3ds");
-	freighter_medium = new model(get_data_dir() + MODEL_DIR + "medium_freighter.3ds");
-	tanker_small = new model(get_data_dir() + MODEL_DIR + "small_tanker.3ds");
-	conning_tower_typeVII = new model(get_data_dir() + MODEL_DIR + "conning_tower_typeVIIc.3ds");
-	font_arial = new font(get_data_dir() + FONT_DIR + "font_arial.png");
-	font_panel = new font(get_data_dir() + FONT_DIR + "font_panel.png");
-	font_nimbusrom = new font(get_data_dir() + FONT_DIR + "font_nimbusrom.png");
-	torpedo_g7 = new model(get_data_dir() + MODEL_DIR + "torpedo_g7.3ds");
-	depth_charge_mdl = new model(get_data_dir() + MODEL_DIR + "depth_charge.3ds");
-	gun_shell_mdl = new model(get_data_dir() + MODEL_DIR + "gun_shell.3ds");
-	titlebackgr = new image(get_data_dir() + IMAGES_DIR + "titlebackgr.jpg");
-	periscope = new image(get_data_dir() + TEXTURE_DIR + "periscope.png");
-	gauge1 = new texture(get_data_dir() + TEXTURE_DIR + "gauge1.png");
-	gauge2 = new texture(get_data_dir() + TEXTURE_DIR + "gauge2.png");
-	gauge3 = new texture(get_data_dir() + TEXTURE_DIR + "gauge3.png");
-	gauge4 = new texture(get_data_dir() + TEXTURE_DIR + "gauge4.png");
-	gauge5 = new texture(get_data_dir() + TEXTURE_DIR + "gauge5.png");
-	psbackgr = new texture(get_data_dir() + TEXTURE_DIR + "psbackgr.png");
-	panelbackgr = new texture(get_data_dir() + TEXTURE_DIR + "panelbackgr.png", GL_LINEAR);
-	addleadangle = new texture(get_data_dir() + TEXTURE_DIR + "addleadangle.png");
-	torpempty = new texture(get_data_dir() + TEXTURE_DIR + "torpempty.png");
-	torpreload = new texture(get_data_dir() + TEXTURE_DIR + "torpreload.png");
-	torpunload = new texture(get_data_dir() + TEXTURE_DIR + "torpunload.png");
-	uzo = new texture(get_data_dir() + TEXTURE_DIR + "uzo.png", GL_LINEAR, GL_CLAMP);
-	metalbackgr = new texture(get_data_dir() + TEXTURE_DIR + "metalbackgr.png", GL_LINEAR);
-	torpt1 = new texture(get_data_dir() + TEXTURE_DIR + "torpt1.png");
-	torpt2 = new texture(get_data_dir() + TEXTURE_DIR + "torpt2.png");
-	torpt3 = new texture(get_data_dir() + TEXTURE_DIR + "torpt3.png");
-	torpt3a = new texture(get_data_dir() + TEXTURE_DIR + "torpt3a.png");
-	torpt4 = new texture(get_data_dir() + TEXTURE_DIR + "torpt4.png");
-	torpt5 = new texture(get_data_dir() + TEXTURE_DIR + "torpt5.png");
-	torpt11 = new texture(get_data_dir() + TEXTURE_DIR + "torpt11.png");
-	torpt1fat = new texture(get_data_dir() + TEXTURE_DIR + "torpt1fat.png");
-	torpt3fat = new texture(get_data_dir() + TEXTURE_DIR + "torpt3fat.png");
-	torpt6lut = new texture(get_data_dir() + TEXTURE_DIR + "torpt6lut.png");
+	skyhemisphere = new model(get_model_dir() + "skyhemisphere.3ds");
+	water = new texture(get_texture_dir() + "water.png", GL_LINEAR);
+	the_moon = new texture(get_texture_dir() + "themoon.png", GL_LINEAR);
+	the_sun = new texture(get_texture_dir() + "thesun.png", GL_LINEAR);
+	background = new texture(get_texture_dir() + "background.png", GL_LINEAR);
+	merchant_large = new model(get_model_dir() + "large_merchant.3ds");
+	merchant_medium = new model(get_model_dir() + "medium_merchant.3ds");
+	merchant_small = new model(get_model_dir() + "small_merchant.3ds");
+	troopship_medium = new model(get_model_dir() + "medium_troopship.3ds");
+	battleship_malaya = new model(get_model_dir() + "battleship_malaya.3ds");
+	carrier_bogue = new model(get_model_dir() + "carrier_bogue.3ds");
+	subVII = new model(get_model_dir() + "submarine_VIIc.3ds");
+	subIXc40 = new model(get_model_dir() + "submarine_IXc40.3ds");
+	subXXI = new model(get_model_dir() + "submarine_XXI.3ds");
+	destroyer_tribal = new model(get_model_dir() + "destroyer_tribal.3ds");
+	corvette_mdl = new model(get_model_dir() + "corvette.3ds");
+	freighter_large = new model(get_model_dir() + "large_freighter.3ds");
+	freighter_medium = new model(get_model_dir() + "medium_freighter.3ds");
+	tanker_small = new model(get_model_dir() + "small_tanker.3ds");
+	conning_tower_typeVII = new model(get_model_dir() + "conning_tower_typeVIIc.3ds");
+	font_arial = new font(get_font_dir() + "font_arial.png");
+	font_panel = new font(get_font_dir() + "font_panel.png");
+	font_nimbusrom = new font(get_font_dir() + "font_nimbusrom.png");
+	torpedo_g7 = new model(get_model_dir() + "torpedo_g7.3ds");
+	depth_charge_mdl = new model(get_model_dir() + "depth_charge.3ds");
+	gun_shell_mdl = new model(get_model_dir() + "gun_shell.3ds");
+	titlebackgr = new image(get_image_dir() + "titlebackgr.jpg");
+	periscope = new image(get_texture_dir() + "periscope.png");
+	gauge1 = new texture(get_texture_dir() + "gauge1.png");
+	gauge2 = new texture(get_texture_dir() + "gauge2.png");
+	gauge3 = new texture(get_texture_dir() + "gauge3.png");
+	gauge4 = new texture(get_texture_dir() + "gauge4.png");
+	gauge5 = new texture(get_texture_dir() + "gauge5.png");
+	psbackgr = new texture(get_texture_dir() + "psbackgr.png");
+	panelbackgr = new texture(get_texture_dir() + "panelbackgr.png", GL_LINEAR);
+	addleadangle = new texture(get_texture_dir() + "addleadangle.png");
+	torpempty = new texture(get_texture_dir() + "torpempty.png");
+	torpreload = new texture(get_texture_dir() + "torpreload.png");
+	torpunload = new texture(get_texture_dir() + "torpunload.png");
+	uzo = new texture(get_texture_dir() + "uzo.png", GL_LINEAR, GL_CLAMP);
+	metalbackgr = new texture(get_texture_dir() + "metalbackgr.png", GL_LINEAR);
+	torpt1 = new texture(get_texture_dir() + "torpt1.png");
+	torpt2 = new texture(get_texture_dir() + "torpt2.png");
+	torpt3 = new texture(get_texture_dir() + "torpt3.png");
+	torpt3a = new texture(get_texture_dir() + "torpt3a.png");
+	torpt4 = new texture(get_texture_dir() + "torpt4.png");
+	torpt5 = new texture(get_texture_dir() + "torpt5.png");
+	torpt11 = new texture(get_texture_dir() + "torpt11.png");
+	torpt1fat = new texture(get_texture_dir() + "torpt1fat.png");
+	torpt3fat = new texture(get_texture_dir() + "torpt3fat.png");
+	torpt6lut = new texture(get_texture_dir() + "torpt6lut.png");
 	for (unsigned i = 0; i < NR_CLOUD_TEXTURES; ++i) {
 		ostringstream filename;
-		filename << get_data_dir() << TEXTURE_DIR << "clouds" << (i+1) << ".png";
+		filename << get_texture_dir() << "clouds" << (i+1) << ".png";
 		cloud_textures[i] = new texture(filename.str(), GL_LINEAR);
 	}
-	clock12 = new texture(get_data_dir() + TEXTURE_DIR + "clock12.png");
-	clock24 = new texture(get_data_dir() + TEXTURE_DIR + "clock24.png");
-	glasses = new texture(get_data_dir() + TEXTURE_DIR + "glasses.png", GL_LINEAR, GL_CLAMP);
-	threesubsimg = new image(get_data_dir() + IMAGES_DIR + "threesubs.jpg");
-	torp_expl_water_splash[0] = new texture(get_data_dir() + TEXTURE_DIR + "torpedo_expl_water_splash.png" , GL_LINEAR);
-	torp_expl_water_splash[1] = new texture(get_data_dir() + TEXTURE_DIR + "torpedo_expl_water_splash_1.png" , GL_LINEAR);
-	torp_expl_water_splash[2] = new texture(get_data_dir() + TEXTURE_DIR + "torpedo_expl_water_splash_2.png" , GL_LINEAR);
-	torpedo_launch_sound = new sound(get_data_dir() + SOUND_DIR + "torpedo_launch.wav" );
-	torpedo_detonation_submerged[0] = new sound(get_data_dir() + SOUND_DIR + "torpedo_detonation_submerged_1.wav" );
-	torpedo_detonation_submerged[1] = new sound(get_data_dir() + SOUND_DIR + "torpedo_detonation_submerged_2.wav" );
-	torpedo_detonation_surfaced[0] = new sound(get_data_dir() + SOUND_DIR + "torpedo_detonation_surfaced_1.wav" );
-	torpedo_detonation_surfaced[1] = new sound(get_data_dir() + SOUND_DIR + "torpedo_detonation_surfaced_2.wav" );
-	logbook_spiral = new image(get_data_dir() + TEXTURE_DIR + "logbook_spiral.png");
-	woodbackgr = new texture(get_data_dir() + TEXTURE_DIR + "wooden_desk.png" );
-	smoke = new texture(get_data_dir() + TEXTURE_DIR + "smoke.png" , GL_LINEAR, GL_CLAMP);
-	notepadsheet = new texture(get_data_dir() + TEXTURE_DIR + "notepadsheet.png" );
-	menuframe = new texture(get_data_dir() + TEXTURE_DIR + "menuframe.png" );
-	turnswitch = new texture(get_data_dir() + TEXTURE_DIR + "turnswitch.png" );
-	turnswitchbackgr = new texture(get_data_dir() + TEXTURE_DIR + "turnswitchbackgr.png" );
-	damage_screen_background = new image(get_data_dir() + IMAGES_DIR + "damage_screen_backg.jpg");
-	sub_damage_scheme_all = new image(get_data_dir() + IMAGES_DIR + "sub_damage_scheme_all.png");
-	repairlight = new texture(get_data_dir() + TEXTURE_DIR + "repairlight.png" );
-	repairmedium = new texture(get_data_dir() + TEXTURE_DIR + "repairmedium.png" );
-	repairheavy = new texture(get_data_dir() + TEXTURE_DIR + "repairheavy.png" );
-	repaircritical = new texture(get_data_dir() + TEXTURE_DIR + "repaircritical.png" );
-	repairwrecked = new texture(get_data_dir() + TEXTURE_DIR + "repairwrecked.png" );
-	killedimg = new image(get_data_dir() + IMAGES_DIR + "killed.jpg");
-	scopewatcherimg = new image(get_data_dir() + IMAGES_DIR + "scopewatcher.jpg");
-	depthchargeimg = new image(get_data_dir() + IMAGES_DIR + "depthcharge.jpg");
-	cloudsbackgr = new texture(get_data_dir() + TEXTURE_DIR + "cloudsbackgr.png" );
-	terraintex = new texture(get_data_dir() + TEXTURE_DIR + "terrain.png" );
+	clock12 = new texture(get_texture_dir() + "clock12.png");
+	clock24 = new texture(get_texture_dir() + "clock24.png");
+	glasses = new texture(get_texture_dir() + "glasses.png", GL_LINEAR, GL_CLAMP);
+	threesubsimg = new image(get_image_dir() + "threesubs.jpg");
+	torp_expl_water_splash[0] = new texture(get_texture_dir() + "torpedo_expl_water_splash.png" , GL_LINEAR);
+	torp_expl_water_splash[1] = new texture(get_texture_dir() + "torpedo_expl_water_splash_1.png" , GL_LINEAR);
+	torp_expl_water_splash[2] = new texture(get_texture_dir() + "torpedo_expl_water_splash_2.png" , GL_LINEAR);
+	torpedo_launch_sound = new sound(get_sound_dir() + "torpedo_launch.wav" );
+	torpedo_detonation_submerged[0] = new sound(get_sound_dir() + "torpedo_detonation_submerged_1.wav" );
+	torpedo_detonation_submerged[1] = new sound(get_sound_dir() + "torpedo_detonation_submerged_2.wav" );
+	torpedo_detonation_surfaced[0] = new sound(get_sound_dir() + "torpedo_detonation_surfaced_1.wav" );
+	torpedo_detonation_surfaced[1] = new sound(get_sound_dir() + "torpedo_detonation_surfaced_2.wav" );
+	logbook_spiral = new image(get_texture_dir() + "logbook_spiral.png");
+	woodbackgr = new texture(get_texture_dir() + "wooden_desk.png" );
+	smoke = new texture(get_texture_dir() + "smoke.png" , GL_LINEAR, GL_CLAMP);
+	notepadsheet = new texture(get_texture_dir() + "notepadsheet.png" );
+	menuframe = new texture(get_texture_dir() + "menuframe.png" );
+	turnswitch = new texture(get_texture_dir() + "turnswitch.png" );
+	turnswitchbackgr = new texture(get_texture_dir() + "turnswitchbackgr.png" );
+	damage_screen_background = new image(get_image_dir() + "damage_screen_backg.jpg");
+	sub_damage_scheme_all = new image(get_image_dir() + "sub_damage_scheme_all.png");
+	repairlight = new texture(get_texture_dir() + "repairlight.png" );
+	repairmedium = new texture(get_texture_dir() + "repairmedium.png" );
+	repairheavy = new texture(get_texture_dir() + "repairheavy.png" );
+	repaircritical = new texture(get_texture_dir() + "repaircritical.png" );
+	repairwrecked = new texture(get_texture_dir() + "repairwrecked.png" );
+	killedimg = new image(get_image_dir() + "killed.jpg");
+	scopewatcherimg = new image(get_image_dir() + "scopewatcher.jpg");
+	depthchargeimg = new image(get_image_dir() + "depthcharge.jpg");
+	cloudsbackgr = new texture(get_texture_dir() + "cloudsbackgr.png" );
+	terraintex = new texture(get_texture_dir() + "terrain.png" );
 }
 
 void deinit_global_data(void)
