@@ -1,3 +1,7 @@
+2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* global_data.h global_data.cpp model.cpp
+	  - replaced path DEFINEs by inline functions.
+
 2003-11-15  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* model.cpp
 	  - combined display lists with vertex arrays.
